@@ -24,6 +24,7 @@
     right)
   add referrer (extract nice external referrer statistics from acc
     output, before or after tai64nlocal)
+  use setresuid and setresgid if available
 
 0.8:
   fix pipelining bug
